종목으로 주식 얻어오는 restful

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
    <servlet-class>net.antistar.RestfulListenerServlet</servlet-class>
    <init-param>
        <param-name>api-xml</param-name>
-       <param-value>messenger-api.xml</param-value>
+       <param-value>trade-api.xml</param-value>
    </init-param>
 </servlet>
 
