주식 정보 호출 및 DB 저장 기능 추가 MQ : rabbitmq 3.5.7 DB : MongoDB v3.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>4.1.0</version>
+		</dependency>		
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
